--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,15 @@
          <artifactId>jbcrypt</artifactId>
          <version>0.4</version>
      </dependency>
+
      <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-security</artifactId>
      </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
