--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ build/
 .vscode/
 
 ### Persistence ###
+/data/applications.txt
+/data/companies.txt
+/data/jobs.txt
+/data/roadmaps.txt
+/data/skills.txt
+/data/users.txt
