--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Educate
 
+spring.banner.location=classpath:banner.txt
+spring.banner.charset=UTF-8
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 Server.port=8050
