Adjusted sping boot's timeout period to be 2 WHOLE MINUTES per phase (and added a graceful shutdown property).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.banner.charset=UTF-8
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 Server.port=8050
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=120s
